feat: use pgx/v5 connector
